tests/errors/_questions/generated_errors/slice_not_from_array/slice_from_int.c
int main()
{
	int arr[2] = {1, 2};
	int not_arr = 10;
	float a = 1.0;
	int b = 1;
	printf("%i", not_arr[b]);	
	return 0;
}